tests/paczka1/small_fuzzy/44749513.err
Error in line 2: A464 A503 6,6
Error in line 11: A464 A464 -4,7
Error in line 14: x9SJpjwA2v A464 85,5
